# Mobile-swarm

./: .gitignore  README.md
agent_msg/msg/: AgentMsg.msg
config/: multi_agent_rviz.rviz
config/euroc/: euroc_mono_imu_config.yaml  euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml  realsense_435i.yaml
config/realsense_d435i/: realsense_stereo_imu_config.yaml
feature_tracker/: package.xml
feature_tracker/src/: feature_tracker_node.cpp
mobile_swarm/: CMakeLists.txt  package.xml
mobile_swarm/include/: agent.h  common_include.h  view_handler.h  visualize.h
mobile_swarm/launch/: myrun.launch  myserver.launch  mytest.launch  server.launch
mobile_swarm/src/: agent.cpp  controller.cpp  mobile_swarm.cpp  obs_detection.cpp  robo_serial.cpp  view_handler.cpp  visualize.cpp
pose_graph/: CMakeLists.txt  package.xml
pose_graph/src/: parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: A3_swarm.launch  euroc_multi_agent.launch  euroc_stereo_multi_agent.launch  mobile.launch  server.launch  what_swarm.launch
vins_estimator/src/: estimator_node.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  parameters.cpp  parameters.h
vins_estimator/src/utility/: visualization.cpp  visualization.h
